# FeatureBot

./: Cargo.toml  README.md
src/: lib.rs
src/core/: bk_cmd.rs  command.rs  features.rs  mod.rs
src/test/: command_test.rs  mod.rs
