[package]
name = "featurebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.22.0"
caduceo = { git = "https://github.com/metalneox/caduceo", branch = "main" }
#caduceo = { path = "../Caduceo" }

reqwest = "0.11.14"
select = "0.6.0"



