[package]
name = "featurebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#frankenstein = "0.23.0"
caduceo = { git = "https://github.com/metalneox/caduceo" }
#caduceo = { path = "../Caduceo" }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
select = "0.6.0"
serde_json = "1.0.116"
